--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="148dp"
-                android:layout_height="108dp"
+                android:layout_width="@dimen/dimen_148"
+                android:layout_height="@dimen/dimen_108"
                 android:src="@drawable/yaghaz_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bottom_sheet_round"
-                android:elevation="2dp"
+                android:elevation="@dimen/elevate_2"
                 android:visibility="visible">
 
                 <TextView
@@ -70,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/paddingAndMargin_38"
-                    android:layout_marginTop="64dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_64"
                     android:text="@string/name_"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -80,12 +80,12 @@
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="21dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_21"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
+                    android:layout_marginEnd="@dimen/paddingAndMargin_21"
                     android:hint="@string/write_14_character"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp"
+                    app:boxStrokeWidth="@dimen/radius_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
@@ -99,12 +99,12 @@
                         android:cursorVisible="true"
                         android:inputType="text"
                         android:lines="1"
-                        android:paddingStart="18dp"
+                        android:paddingStart="@dimen/paddingAndMargin_18"
                         android:paddingEnd="@dimen/paddingAndMargin_4"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
                         app:boxStrokeColor="@color/black"
-                        app:boxStrokeWidth="4dp" />
+                        app:boxStrokeWidth="@dimen/radius_4" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -113,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/paddingAndMargin_38"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
                     android:text="@string/email"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/userNameInputLayout" />
@@ -123,12 +123,12 @@
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="21dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_21"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
+                    android:layout_marginEnd="@dimen/paddingAndMargin_21"
                     android:hint="@string/write_your_email"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp"
+                    app:boxStrokeWidth="@dimen/radius_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/email_tv"
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/paddingAndMargin_38"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
                     android:text="@string/phone_number"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />
@@ -166,12 +166,12 @@
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="21dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_21"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
+                    android:layout_marginEnd="@dimen/paddingAndMargin_21"
                     android:hint="@string/write_11_numbers"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp"
+                    app:boxStrokeWidth="@dimen/radius_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/phone_num_tv"
@@ -185,7 +185,7 @@
                         android:cursorVisible="true"
                         android:inputType="numberSigned"
                         android:lines="1"
-                        android:paddingStart="18dp"
+                        android:paddingStart="@dimen/paddingAndMargin_18"
                         android:paddingTop="14dp"
                         android:paddingEnd="@dimen/paddingAndMargin_4"
                         android:paddingBottom="10dp"
@@ -201,7 +201,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/paddingAndMargin_38"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_4"
                     android:text="@string/password"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/phoneInputLayout" />
@@ -211,13 +211,14 @@
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="21dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_21"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
+                    android:layout_marginEnd="@dimen/paddingAndMargin_21"
                     app:endIconMode="password_toggle"
+                    app:endIconTint="@color/gray_100"
                     android:hint="@string/write_8_character_at_least"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp"
+                    app:boxStrokeWidth="@dimen/radius_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/password_tv"
@@ -231,12 +232,12 @@
                         android:cursorVisible="true"
                         android:inputType="textPassword"
                         android:lines="1"
-                        android:paddingStart="18dp"
+                        android:paddingStart="@dimen/paddingAndMargin_18"
                         android:paddingEnd="@dimen/paddingAndMargin_4"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
                         app:boxStrokeColor="@color/black"
-                        app:boxStrokeWidth="4dp" />
+                        app:boxStrokeWidth="@dimen/radius_4" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -245,7 +246,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/paddingAndMargin_38"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
                     android:text="@string/confirm_password"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />
@@ -255,13 +256,14 @@
                     style="@style/TextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="21dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_21"
+                    android:layout_marginTop="@dimen/paddingAndMargin_8"
+                    android:layout_marginEnd="@dimen/paddingAndMargin_21"
                     android:hint="@string/write_your_password_again"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp"
                     app:endIconMode="password_toggle"
+                    app:endIconTint="@color/gray_100"
+                    app:boxStrokeWidth="@dimen/radius_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/confirm_password_tv"
@@ -275,12 +277,12 @@
                         android:cursorVisible="true"
                         android:inputType="textPassword"
                         android:lines="1"
-                        android:paddingStart="18dp"
+                        android:paddingStart="@dimen/paddingAndMargin_18"
                         android:paddingEnd="@dimen/paddingAndMargin_4"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
                         app:boxStrokeColor="@color/black"
-                        app:boxStrokeWidth="4dp" />
+                        app:boxStrokeWidth="@dimen/radius_4" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
@@ -294,7 +296,7 @@
                     android:gravity="center"
                     android:text="@string/sign_up"
                     android:textColor="@color/white"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/font_size_24"
                     app:cornerRadius="@dimen/radius_12"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -304,8 +306,9 @@
                     android:id="@+id/login_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
+                    android:layout_marginTop="@dimen/paddingAndMargin_12"
+                    android:layout_marginBottom="@dimen/paddingAndMargin_12"
+                    android:paddingVertical="@dimen/paddingAndMargin_4"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -315,7 +318,7 @@
                         android:id="@+id/already_have_an_acc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="@dimen/paddingAndMargin_4"
                         android:fontFamily="@font/tt_commons_medium"
                         android:letterSpacing="0.04"
                         android:padding="@dimen/paddingAndMargin_4"
