--- a/app/src/main/res/layout/item_categories_home.xml
+++ b/app/src/main/res/layout/item_categories_home.xml
@@ -1,8 +1,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="136dp"
-    android:layout_height="114dp"
+    android:layout_width="@dimen/dimen_136"
+    android:layout_height="@dimen/dimen_114"
     android:layout_marginLeft="@dimen/paddingAndMargin_6"
     android:layout_marginTop="@dimen/paddingAndMargin_8"
     android:layout_marginRight="@dimen/paddingAndMargin_6"
@@ -33,9 +33,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/paddingAndMargin_8"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/paddingAndMargin_24"
         android:layout_marginEnd="@dimen/paddingAndMargin_8"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/paddingAndMargin_24"
         android:background="@drawable/background_8dp_round_corners_white"
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
