--- a/app/src/main/res/layout/item_trending_home.xml
+++ b/app/src/main/res/layout/item_trending_home.xml
@@ -1,8 +1,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="136dp"
-    android:layout_height="109dp"
+    android:layout_width="@dimen/dimen_136"
+    android:layout_height="@dimen/dimen_109"
     android:layout_marginLeft="@dimen/paddingAndMargin_6"
     android:layout_marginTop="@dimen/paddingAndMargin_8"
     android:layout_marginRight="@dimen/paddingAndMargin_6"
