--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="148dp"
-                android:layout_height="108dp"
+                android:layout_width="@dimen/dimen_148"
+                android:layout_height="@dimen/dimen_108"
                 android:src="@drawable/yaghaz_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/paddingAndMargin_18_negative"
             android:background="@drawable/bottom_sheet_round"
-            android:elevation="2dp"
+            android:elevation="@dimen/elevate_2"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/paddingAndMargin_38"
-                android:layout_marginTop="84dp"
+                android:layout_marginTop="@dimen/paddingAndMargin_84"
                 android:text="@string/email"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -78,12 +78,12 @@
                 style="@style/TextInputLayoutStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/paddingAndMargin_21"
+                android:layout_marginTop="@dimen/paddingAndMargin_8"
                 android:layout_marginEnd="21dp"
                 android:hint="@string/write_your_email"
                 app:boxStrokeColor="@color/black"
-                app:boxStrokeWidth="4dp"
+                app:boxStrokeWidth="@dimen/paddingAndMargin_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/email_tv"
@@ -97,12 +97,12 @@
                     android:cursorVisible="true"
                     android:inputType="text"
                     android:lines="1"
-                    android:paddingStart="18dp"
+                    android:paddingStart="@dimen/paddingAndMargin_18"
                     android:paddingEnd="@dimen/paddingAndMargin_4"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp" />
+                    app:boxStrokeWidth="@dimen/radius_4" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -121,13 +121,14 @@
                 style="@style/TextInputLayoutStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="21dp"
+                android:layout_marginStart="@dimen/paddingAndMargin_21"
+                android:layout_marginTop="@dimen/paddingAndMargin_8"
+                android:layout_marginEnd="@dimen/paddingAndMargin_21"
                 android:hint="@string/write_8_character_at_least"
                 app:boxStrokeColor="@color/black"
-                app:boxStrokeWidth="4dp"
+                app:boxStrokeWidth="@dimen/radius_4"
                 app:endIconMode="password_toggle"
+                app:endIconTint="@color/gray_100"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password_tv"
@@ -139,21 +140,21 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/inner_shadow_input_layout"
                     android:cursorVisible="true"
-                    android:inputType="text"
+                    android:inputType="textPassword"
                     android:lines="1"
-                    android:paddingStart="18dp"
+                    android:paddingStart="@dimen/paddingAndMargin_18"
                     android:paddingEnd="@dimen/paddingAndMargin_4"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="4dp" />
+                    app:boxStrokeWidth="@dimen/radius_4" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/forogotPassword_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/paddingAndMargin_4"
                 android:fontFamily="@font/tt_commons_medium"
                 android:letterSpacing="0.04"
                 android:text="@string/forgot_the_password"
@@ -165,15 +166,15 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_btn"
                 style="@style/MaterialButtonStyle"
-                android:layout_width="305dp"
-                android:layout_height="51dp"
-                android:layout_marginTop="32dp"
+                android:layout_width="@dimen/paddingAndMargin_305"
+                android:layout_height="@dimen/paddingAndMargin_51"
+                android:layout_marginTop="@dimen/paddingAndMargin_32"
                 android:backgroundTint="@color/btn_color"
-                android:fontFamily="@font/tt_commons_medium"
+                android:fontFamily="@font/tt_commons_bold"
                 android:gravity="center"
                 android:text="@string/log_in"
                 android:textColor="@color/white"
-                android:textSize="24sp"
+                android:textSize="@dimen/font_size_24"
                 app:cornerRadius="@dimen/radius_12"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -184,6 +185,7 @@
                 android:id="@+id/signup_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingVertical="@dimen/paddingAndMargin_4"
                 android:layout_marginTop="@dimen/paddingAndMargin_38"
                 android:layout_marginBottom="@dimen/paddingAndMargin_38"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -196,7 +198,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:fontFamily="@font/tt_commons_medium"
+                    android:fontFamily="sans-serif-condensed-medium"
                     android:text="@string/dont_have_an_account"
                     android:textColor="@color/gray_100"
                     android:textSize="@dimen/font_size_12"
@@ -209,13 +211,14 @@
                     android:id="@+id/tv_sign_up"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="2dp"
+                    android:layout_marginStart="@dimen/paddingAndMargin_2"
                     android:fontFamily="@font/tt_commons_medium"
                     android:text="@string/sign_up"
                     android:textColor="@color/btn_color"
                     android:textSize="@dimen/font_size_12"
                     android:letterSpacing="0.04"
                     android:textStyle="bold"
+                    android:padding="@dimen/paddingAndMargin_6"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_acc"
                     app:layout_constraintStart_toEndOf="@+id/dont_have_an_acc"
