--- a/app/src/main/res/layout/item_popular_now_home.xml
+++ b/app/src/main/res/layout/item_popular_now_home.xml
@@ -1,23 +1,30 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="188dp"
-    android:layout_height="162dp"
+    android:layout_width="@dimen/dimen_188"
+    android:layout_height="@dimen/dimen_162"
     android:layout_marginLeft="@dimen/paddingAndMargin_6"
     android:layout_marginTop="@dimen/paddingAndMargin_8"
     android:layout_marginRight="@dimen/paddingAndMargin_6"
     android:layout_marginBottom="@dimen/paddingAndMargin_4"
     android:elevation="@dimen/elevate_2"
-    android:background="@drawable/background_19dp_round_corners_white">
+    app:cardCornerRadius="@dimen/radius_19"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <ImageView
         android:id="@+id/favorite_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dimen_36"
+        android:layout_height="@dimen/dimen_36"
         android:contentDescription="@string/app_name"
+        android:elevation="@dimen/elevate_4"
         android:padding="@dimen/paddingAndMargin_8"
         android:scaleType="fitXY"
-        android:elevation="@dimen/elevate_4"
         android:src="@drawable/fav_unfilled_icon"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +34,7 @@
         android:id="@+id/product_image_iv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="@dimen/elevate_2"
         android:scaleType="fitXY"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +46,7 @@
         android:id="@+id/bottom_half_layout"
         android:layout_width="0dp"
         android:layout_height="80dp"
+        android:elevation="@dimen/elevate_4"
         android:background="@drawable/black_transparent_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +57,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/paddingAndMargin_8"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="@dimen/paddingAndMargin_8"
+            android:layout_marginEnd="@dimen/paddingAndMargin_8"
             android:maxLines="1"
             android:textColor="@color/gold"
             android:textSize="16sp"
@@ -60,10 +69,10 @@
 
         <ImageView
             android:id="@+id/location_iv"
-            android:layout_width="12dp"
+            android:layout_width="@dimen/paddingAndMargin_12"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/paddingAndMargin_4"
+            android:layout_marginTop="@dimen/paddingAndMargin_4"
             android:scaleType="fitXY"
             android:src="@drawable/location_icon"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,3 +108,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
