--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Yogahaz" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.Yogahaz" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
     <item name="colorPrimary">@color/primary_100</item>
     <item name="colorPrimaryVariant">@color/primary_40</item>
     <item name="colorOnPrimary">@color/white</item>
-    <!-- Secondary brand color. -->
+        <item name="colorPrimaryDark">@color/white</item>
+
+        <!-- Secondary brand color. -->
     <item name="colorSecondary">@color/secondary_100</item>
     <item name="colorSecondaryVariant">@color/secondary_40</item>
     <item name="colorOnSecondary">@color/black</item>
